src/parser/snapshots/rex__parser__tests__snapshot_array.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\begin{array}{c}\\end{array}\")"
---
Ok(
    [
        Array(
            Array {
                col_format: ArrayColumnsFormatting {
                    alignment: [
                        Centered,
                    ],
                    separators: [
                        [],
                        [],
                    ],
                },
                rows: [],
                left_delimiter: None,
                right_delimiter: None,
            },
        ),
    ],
)
