src/parser/snapshots/rex__parser__tests__snapshot_delimited-10.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\left)1+1\\right)\")"
---
Err(
    ExpectedOpen(
        Symbol {
            codepoint: ')',
            atom_type: Close,
        },
    ),
)
