src/parser/snapshots/rex__parser__tests__snapshot_delimited-2.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\left(\\right.\")"
---
Ok(
    [
        Delimited(
            Delimited {
                delimiters: [
                    Some(
                        Symbol {
                            codepoint: '(',
                            atom_type: Open,
                        },
                    ),
                    None,
                ],
                inners: [
                    [],
                ],
            },
        ),
    ],
)
