src/parser/snapshots/rex__parser__tests__snapshot_delimited-5.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\left(1\\middle|2\\right)\")"
---
Ok(
    [
        Delimited(
            Delimited {
                delimiters: [
                    Some(
                        Symbol {
                            codepoint: '(',
                            atom_type: Open,
                        },
                    ),
                    Some(
                        Symbol {
                            codepoint: '|',
                            atom_type: Fence,
                        },
                    ),
                    Some(
                        Symbol {
                            codepoint: ')',
                            atom_type: Close,
                        },
                    ),
                ],
                inners: [
                    [
                        Symbol(
                            Symbol {
                                codepoint: '1',
                                atom_type: Alpha,
                            },
                        ),
                    ],
                    [
                        Symbol(
                            Symbol {
                                codepoint: '2',
                                atom_type: Alpha,
                            },
                        ),
                    ],
                ],
            },
        ),
    ],
)
