src/parser/snapshots/rex__parser__tests__snapshot_delimited-8.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\left(1\\middle|\")"
---
Err(
    ExpectedDelimiter {
        found: Eof,
        expected: RightDelimiter,
    },
)
