src/parser/snapshots/rex__parser__tests__snapshot_delimited-9.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\right(1+1\")"
---
Err(
    ExpectedEof(
        Command(
            "right",
        ),
    ),
)
