src/parser/snapshots/rex__parser__tests__snapshot_delimited.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\left(\\right)\")"
---
Ok(
    [
        Delimited(
            Delimited {
                delimiters: [
                    Some(
                        Symbol {
                            codepoint: '(',
                            atom_type: Open,
                        },
                    ),
                    Some(
                        Symbol {
                            codepoint: ')',
                            atom_type: Close,
                        },
                    ),
                ],
                inners: [
                    [],
                ],
            },
        ),
    ],
)
