src/parser/snapshots/rex__parser__tests__snapshot_delimiter-2.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\bigr]\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: ']',
                atom_type: Close,
            },
        ),
    ],
)
