src/parser/snapshots/rex__parser__tests__snapshot_delimiter-4.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\Biggr|\")"
---
Err(
    ExpectedAtomType(
        Close,
        Fence,
    ),
)
