src/parser/snapshots/rex__parser__tests__snapshot_delimiter-6.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\bigr\\lBrack\")"
---
Err(
    ExpectedAtomType {
        expected: Close,
        found: Open,
    },
)
