src/parser/snapshots/rex__parser__tests__snapshot_delimiter-7.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\Bigl\\rangle\")"
---
Err(
    ExpectedAtomType(
        Open,
        Close,
    ),
)
